3.nginx_routing/3.ingress_https.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: hannah
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  namespace: hannah 
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: my-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: hannah
  annotations:
    kubernetes.io/ingress.class: nginx
    # 앞의 prefix 제거
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.dabok.store"
    secretName: dabok-com-tls
  rules:
  - host: server.dabok.store
    http:
      paths:
      - path: /product-service
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /order-service
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
